Mon May 27 23:24:57 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing 1.0.18
	* doc/*: recompiled the API and web site

Mon May 27 19:14:46 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/namespaces.c libxslt/transform.c: fix bug #81099 about
	  duplicated namespace declarations, this might not be as generic as
	  it should but works well for DocBook stylesheets

Sat May 25 12:07:45 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.pc.in: fix bug #82970

Fri May 24 15:02:50 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/libxslt-python-api.xml python/libxslt.c 
	  python/libxsltclass.txt : tried to fix #79105 by providing a 
	  specific error registering routine.

Thu May 23 17:28:35 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.[ch] : applied patch from Morus Walter
	  adding xsltSaveResultToString()
	* doc/APIfiles.html doc/APIfunctions.html doc/libxslt-api.xml
	  doc/libxslt-decl.txt doc/libxslt-refs.xml: this increased the
	  API with the new function.

Wed May 22 11:50:36 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/function.c: applied a patch from Richard Jinks
	  to avoid a crash in element-available()

Tue May 21 19:38:20 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: applied patch from Geert Kloosterman to
	  not miss gif and .png files in the RPM  documentation

Tue May 21 08:43:11 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.4: Applied patch for the EXSLT man page
	  from Charles Bozeman

Sat May 18 10:01:38 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.4 libxslt/libxslt.4 libxslt/keys.c 
	  libxslt/xsltconfig.h.in: applied a man page patch from 
	  Christian Cornelssen and fixed a couple of issues he raised.

Thu May 16 19:38:24 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: moved the extension dump out of the loop
