@@ -39,12 +39,10 @@
 
 #include "exslt.h"
 
+#include <string.h>
+
 #ifdef HAVE_TIME_H
 #include <time.h>
-#endif
-
-#ifdef HAVE_STRING_H
-#include <string.h>
 #endif
 
 #ifdef HAVE_MATH_H
